--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
+    "proxy": "^0.2.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
@@ -29,5 +30,6 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
