--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Mock Stock Portfolio",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix clients",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,7 +24,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.2",
-    "nodemon": "^1.17.5"
+    "mongoose": "^5.2.3",
+    "nodemon": "^1.18.2"
   }
 }
